training part done

--- a/EDA/Forest_cover.ipynb
+++ b/EDA/Forest_cover.ipynb
@@ -2544,9 +2544,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>aspect</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>horizontal_distance_to_hydrology</th>\n",
+       "      <th>Vertical_Distance_To_Hydrology</th>\n",
+       "      <th>Horizontal_Distance_To_Roadways</th>\n",
+       "      <th>Horizontal_Distance_To_Fire_Points</th>\n",
+       "      <th>wilderness_area1</th>\n",
+       "      <th>wilderness_area2</th>\n",
+       "      <th>wilderness_area3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>soil_type_32</th>\n",
+       "      <th>soil_type_33</th>\n",
+       "      <th>soil_type_34</th>\n",
+       "      <th>soil_type_35</th>\n",
+       "      <th>soil_type_36</th>\n",
+       "      <th>soil_type_37</th>\n",
+       "      <th>soil_type_38</th>\n",
+       "      <th>soil_type_39</th>\n",
+       "      <th>soil_type_40</th>\n",
+       "      <th>Cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.728058</td>\n",
+       "      <td>-0.084007</td>\n",
+       "      <td>-1.217355</td>\n",
+       "      <td>-0.564320</td>\n",
+       "      <td>-0.767157</td>\n",
+       "      <td>-0.356789</td>\n",
+       "      <td>-0.967202</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.931641</td>\n",
+       "      <td>-1.202527</td>\n",
+       "      <td>-0.815816</td>\n",
+       "      <td>-0.955355</td>\n",
+       "      <td>-0.818815</td>\n",
+       "      <td>0.335597</td>\n",
+       "      <td>-0.116609</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.025053</td>\n",
+       "      <td>1.625092</td>\n",
+       "      <td>0.254955</td>\n",
+       "      <td>-1.073137</td>\n",
+       "      <td>-0.681061</td>\n",
+       "      <td>1.246159</td>\n",
+       "      <td>-1.251490</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.105786</td>\n",
+       "      <td>-1.265164</td>\n",
+       "      <td>0.121108</td>\n",
+       "      <td>-0.564320</td>\n",
+       "      <td>0.317652</td>\n",
+       "      <td>-0.859876</td>\n",
+       "      <td>-0.882521</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.112924</td>\n",
+       "      <td>0.086008</td>\n",
+       "      <td>-1.485047</td>\n",
+       "      <td>0.566385</td>\n",
+       "      <td>1.884598</td>\n",
+       "      <td>-0.757847</td>\n",
+       "      <td>-1.056420</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 52 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   elevation    aspect     slope  horizontal_distance_to_hydrology  \\\n",
+       "0  -0.728058 -0.084007 -1.217355                         -0.564320   \n",
+       "1   0.931641 -1.202527 -0.815816                         -0.955355   \n",
+       "2   0.025053  1.625092  0.254955                         -1.073137   \n",
+       "3  -2.105786 -1.265164  0.121108                         -0.564320   \n",
+       "4  -2.112924  0.086008 -1.485047                          0.566385   \n",
+       "\n",
+       "   Vertical_Distance_To_Hydrology  Horizontal_Distance_To_Roadways  \\\n",
+       "0                       -0.767157                        -0.356789   \n",
+       "1                       -0.818815                         0.335597   \n",
+       "2                       -0.681061                         1.246159   \n",
+       "3                        0.317652                        -0.859876   \n",
+       "4                        1.884598                        -0.757847   \n",
+       "\n",
+       "   Horizontal_Distance_To_Fire_Points  wilderness_area1  wilderness_area2  \\\n",
+       "0                           -0.967202                 1                 0   \n",
+       "1                           -0.116609                 0                 0   \n",
+       "2                           -1.251490                 1                 0   \n",
+       "3                           -0.882521                 0                 0   \n",
+       "4                           -1.056420                 0                 0   \n",
+       "\n",
+       "   wilderness_area3  ...  soil_type_32  soil_type_33  soil_type_34  \\\n",
+       "0                 0  ...             0             0             0   \n",
+       "1                 1  ...             0             0             0   \n",
+       "2                 0  ...             0             0             0   \n",
+       "3                 0  ...             0             0             0   \n",
+       "4                 0  ...             0             0             0   \n",
+       "\n",
+       "   soil_type_35  soil_type_36  soil_type_37  soil_type_38  soil_type_39  \\\n",
+       "0             0             0             0             0             0   \n",
+       "1             0             0             0             0             0   \n",
+       "2             0             0             0             0             0   \n",
+       "3             0             0             0             0             0   \n",
+       "4             0             0             0             0             0   \n",
+       "\n",
+       "   soil_type_40  Cluster  \n",
+       "0             0        2  \n",
+       "1             0        2  \n",
+       "2             0        0  \n",
+       "3             0        1  \n",
+       "4             0        1  \n",
+       "\n",
+       "[5 rows x 52 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#divide the data into clusters\n",
     "km_algo=KMeans(n_clusters=num_of_cluster,random_state=45)\n",
@@ -2557,7 +2778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2570,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2749,7 +2970,7 @@
     "\n",
     "                else:\n",
     "\n",
-    "                    self.xgboost_prediction_random_forestscore = roc_auc_score(test_y, self.prediction_xgboost, multi_class='ovr') # AUC for XGBoost\n",
+    "                    self.xgboost_score = roc_auc_score(test_y, self.prediction_xgboost, multi_class='ovr') # AUC for XGBoost\n",
     "\n",
     "                    print( 'Accuracy for XGBoost:' + str(self.xgboost_score)) # Log AUC\n",
     "\n",
@@ -2798,9 +3019,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 0 1 3]\n",
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "Accuracy for XGBoost:0.9586055449958184\n",
+      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
+      "AUC for RF:0.795490748630726\n",
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "Accuracy for XGBoost:0.9496388828331543\n",
+      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
+      "AUC for RF:0.7181476605939412\n",
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "Accuracy for XGBoost:0.9653850505428122\n",
+      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
+      "AUC for RF:0.820309992786787\n",
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "Accuracy for XGBoost:0.9728947313385278\n",
+      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
+      "AUC for RF:0.8173896148635785\n"
+     ]
+    }
+   ],
    "source": [
     "#list of clusters \n",
     "X_bal['label']=y_bal\n",
